# bank-system

./: CMakeLists.txt  main.cpp
include/: bank.h  sys.h  times.h
realization/: bank.cpp  sys.cpp  times.cpp
